# python-gui-manipulation

./: GuiManipulation.py  README.md  pyproject.toml
GUI/: GraphicalUserInterface.py  GuiManipulation.py  graphic_interface.py  service_manipule_screen.py
